fix issue with timelines not showing load more button when switching between pages

--- a/smiggins/less/home.less
+++ b/smiggins/less/home.less
@@ -186,7 +186,7 @@
     width: 100vw;
     max-width: unset;
     border: none;
-    padding-bottom: calc(@navbar-item-height + 2 * @navbar-item-vertical-padding);
+    padding-bottom: calc(@navbar-item-height + 2 * @navbar-item-vertical-padding + 1em);
   }
 
   #navbar {
